--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.0.3
+Date: 2021-08-16
+  Changes:
+    - Added, changed scripts
+    - Small changes to configs
+---------------------------------------------------------------------------------------------------
 Version: 0.0.1
 Date: 2021-08-12
   Notes:
