--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,14 @@
 ﻿---------------------------------------------------------------------------------------------------
+Version: 0.1.0
+Date: 2022-24-01
+  Features:
+    - A new approach that is compatible with vscode
+  Changes:
+    - Changed dependencies
+    - New example
+    - New script
+    - Changed GitHub actions
+---------------------------------------------------------------------------------------------------
 Version: 0.0.3
 Date: 2021-08-16
   Changes:
